# docs/swagger.json
@@ -747,6 +747,12 @@
                             "$ref": "#/definitions/response.ErrorMessage"
                         }
                     },
+                    "413": {
+                        "description": "Request Entity Too Large",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorMessage"
+                        }
+                    },
                     "503": {
                         "description": "Service Unavailable",
                         "schema": {
